infra/k8s/base/gateway/routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-public
  namespace: core
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api/auth/google`) || Path(`/api/auth/refresh`) || Path(`/api/auth/validate`) || PathPrefix(`/api/auth/swagger-ui`) || PathPrefix(`/api/auth/v3/api-docs`)
      kind: Rule
      middlewares:
        - name: cors
          namespace: core
      services:
        - name: auth
          port: 8081
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-protected
  namespace: core
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/api/auth/provider`)
      kind: Rule
      middlewares:
        - name: auth-forward
          namespace: core
        - name: cors
          namespace: core
      services:
        - name: auth
          port: 8081
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fe-route
  namespace: core
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      priority: 1
      services:
        - name: fe
          port: 5173
